Updated theme header info

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
 /*
-* Theme Name: HackerYou Starter Theme
-* Theme URI: http://hackeryou.com;
-* Description: Starter theme for building any website. Created by HackerYou. * Rename this to your own theme page.
+* Theme Name: Food Theme
+* Theme URI: https://github.com/WordPress-Wizards;
+* Description: Starter theme for building a food/beverage site. Created by Wordpress Wizards
 * Version: 1.0
-* Author: HackerYou
-* Author URI: http://hackeryou.com
+* Author: Vesna Jocic & John Salvino
+* Author URI: https://github.com/WordPress-Wizards
 */
 
 @import 'normalize';
