--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,8 +1,8 @@
 a {
-	color: #BA209B;
+	color: $sunset;
 	text-decoration: none;
 	&:hover {
-		color: #D424B1;
+		color: darken($sunset, 10%);
 	}
 }
 
