--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,14 +1,40 @@
-ul.menu {
+// general menu styles
+
+.menu {
 	margin: 0;
 	padding: 0;
-	li {
-		display: inline;
-		margin-right: 10px;
-		a {
-			color: #333;
-			padding: 10px;
-			background: #333;
-			color: white;
-		}
-	}
 }
+
+.menu li {
+	display: inline;	
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 2.8rem;
+	text-transform: uppercase;
+}
+
+.menu li a {
+	padding: 10px;
+	color: $sunset;
+}
+
+// main nav styles
+
+#menu-main-nav li:nth-child(3) {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 5.4rem;
+	text-transform: uppercase;
+	border-bottom: 6px solid $sunset;
+}
+
+// social nav styles
+
+#menu-social-menu li:after {
+	content: url('images/diamond.png');
+	color: $sunset;
+}
+
+#menu-social-menu li:last-child:after {
+	content: '';
+}
+
+
