--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -6,9 +6,34 @@ a {
 	}
 }
 
+h1 {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 5.4rem;
+	color: $sunset;
+}
+
+h2 {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 7.2rem;
+	color: $sunset;
+}
+
+h3 {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 2.8rem;
+	color: $sunset;
+}
+
+h4 {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 2.4rem;
+	color: $sunset;
+}
+
 /* paragraphs */
 
 p {
+	font-size: 1.8rem;
 	line-height: 1.5;
 }
 
@@ -48,9 +73,9 @@ dd {
 
 /*lists*/
 
-ul li, ol li {
-	padding: 3px;
-}
+// ul li, ol li {
+// 	padding: 3px;
+// }
 
 /*PRE*/
 
