More home page styling

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -29,7 +29,7 @@
 // social nav styles
 
 #menu-social-menu li:after {
-	content: url('images/diamond.png');
+	content: url('images/diamond.svg');
 	color: $sunset;
 }
 
