--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -13,20 +13,51 @@
 }
 
 .menu li a {
-	padding: 10px;
-	color: $sunset;
+  padding: 0;
+  color: $sunset;
+  vertical-align: top; 
 }
 
 // main nav styles
 
+#menu-main-nav li a {
+	margin: 2rem 4rem 0 4rem;
+}
+
+#menu-main-nav li a:hover {
+  color: darken($sunset, 10%);
+  border-bottom: 3px solid darken($sunset, 10%);
+}
+
 #menu-main-nav li:nth-child(3) {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 5.4rem;
-	text-transform: uppercase;
-	border-bottom: 6px solid $sunset;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 5.4rem;
+  text-transform: uppercase;
+  border-bottom: 6px solid $sunset;
+  line-height: 1;
+  margin: 0 4rem;
+}
+
+#menu-main-nav li:nth-child(3) a {
+  padding: 0;
+  margin: 0;
+}
+
+#menu-main-nav li:nth-child(3) a:hover {
+  color: darken($sunset, 10%);
+  border-bottom: 6px solid darken($sunset, 10%);
 }
 
 // social nav styles
+
+#menu-social-menu li a {
+	padding: 1rem;
+}
+
+#menu-social-menu li a:hover {
+	color: darken($sunset, 10%);
+	padding: 1rem;
+}
 
 #menu-social-menu li:after {
 	content: url('images/diamond.svg');
