Contact page styling

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,3 +2,4 @@
 $seagreen: rgba(158, 232, 197, 1);
 $seagreen70: rgba(158, 232, 197, 0.7);
 $sunset: rgba(253, 78, 73, 1);
+$darkgrey: rgba(52, 52, 52, 1);
