--- a/sass/style.scss
+++ b/sass/style.scss
@@ -157,6 +157,101 @@ Menu Page Default Styling
 
 /*
 ====================================
+Contact Page Default Styling
+====================================
+*/
+
+.main-contact {
+	margin: 2% 0;
+}
+
+.main-contact p {
+	font-weight: 300;
+}
+
+.main-contact .container {
+	display: flex;
+	background: $seagreen70;
+	width: 70%;
+}
+
+.main-contact .container .contact-text {
+	width: 70%;
+	text-align: center;
+}
+
+.main-contact .container .sidebar {
+	width: 30%;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="submit"]:focus,
+textarea:focus {
+	outline: none;
+}
+
+
+input[type="text"],
+input[type="email"],
+input[type="submit"],
+textarea
+{
+	padding: 0.6rem;
+	border:none;
+	resize: none;
+	color: $darkgrey;
+}
+
+textarea {
+	height: 10rem;
+}
+
+.contact-text {
+	width: 70%;
+	margin: 0 auto;
+}
+
+.contact-text p {
+	font-size: 1.8rem;
+	color: $darkgrey;
+	line-height: 1.5;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+
+.contact-text h3{
+	color: $sunset;
+	font-size: 2.8rem;
+}
+
+input[type="submit"] {
+	color: $sunset;
+	background: none;
+	text-transform: uppercase;
+	padding: 1rem 2rem;
+	border: 1px solid $sunset;
+}
+
+input[type="submit"]:hover {
+	color: $seagreen;
+	background: $sunset;
+	transition: all 0.5s ease;
+}
+
+.sci-contact {
+	margin-bottom: 6rem;
+}
+
+.sci-contact p {
+	line-height: 0.5;
+}
+
+.sci-address p {
+	line-height: 0.3;
+}
+
+/*
+====================================
 Footer Default Styling
 ====================================
 */
