--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,13 @@
 footer {
 	clear: both;
 }
+
+footer p {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 1.4rem;
+	font-weight: 300;
+	text-transform: uppercase;
+	color: $darkgrey;
+	margin: 0;
+	padding: 1rem 1.5rem 2rem 0;
+}
