--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -51,12 +51,13 @@
 // social nav styles
 
 #menu-social-menu li a {
-	padding: 1rem;
+  font-size: 2.4rem;
+	margin: 1rem 1.5rem;
+  vertical-align: bottom;
 }
 
 #menu-social-menu li a:hover {
 	color: darken($sunset, 10%);
-	padding: 1rem;
 }
 
 #menu-social-menu li:after {
@@ -68,4 +69,11 @@
 	content: '';
 }
 
+// media queries
+
+@media (max-width: 1175px) {
+  #menu-main-nav li a {
+  margin: 2rem 2rem 0 2rem;
+}
+}
 
