Updating styles & menu

--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -1,3 +1,9 @@
+/*
+====================================
+Comments Default Styling
+====================================
+*/
+
 #comments .navigation {
 	padding: 0 0 18px;
 }
@@ -225,3 +231,5 @@ p.form-allowed-tags, .nocomments {
 #respond p, #comments-list ul #respond {
 	margin: 0;
 }
+
+// end of styles
