--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,13 +1,18 @@
-footer {
-	clear: both;
-}
+/*
+====================================
+Footer Styling
+====================================
+*/
 
-footer p {
+.footer-main p {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 1.4rem;
 	font-weight: 300;
 	text-transform: uppercase;
 	color: $darkgrey;
+	text-align: center;
 	margin: 0;
 	padding: 1rem 1.5rem 2rem 0;
 }
+
+// end of styles
