--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,21 +1,32 @@
-// general menu styles
+/*
+====================================
+Navigation Styling
+====================================
+*/
 
 .menu {
 	margin: 0;
 	padding: 0;
+  text-align: center;
 }
 
 .menu li {
 	display: inline;	
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 2.8rem;
+  letter-spacing: 0.1rem;
 	text-transform: uppercase;
+  text-shadow: 1px 1px 1px white;
 }
 
 .menu li a {
   padding: 0;
   color: $sunset;
   vertical-align: top; 
+}
+
+.menu li a:hover {
+  color: darken($sunset, 10%);
 }
 
 // main nav styles
@@ -25,7 +36,6 @@
 }
 
 #menu-main-nav li a:hover {
-  color: darken($sunset, 10%);
   border-bottom: 3px solid darken($sunset, 10%);
 }
 
@@ -33,6 +43,7 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 5.4rem;
   text-transform: uppercase;
+  text-shadow: 2px 2px 1px white;
   border-bottom: 6px solid $sunset;
   line-height: 1;
   margin: 0 4rem;
@@ -56,10 +67,6 @@
   vertical-align: bottom;
 }
 
-#menu-social-menu li a:hover {
-	color: darken($sunset, 10%);
-}
-
 #menu-social-menu li:after {
 	content: url('images/diamond.svg');
 	color: $sunset;
@@ -73,7 +80,8 @@
 
 @media (max-width: 1175px) {
   #menu-main-nav li a {
-  margin: 2rem 2rem 0 2rem;
-}
+    margin: 2rem 2rem 0 2rem;
+  }
 }
 
+// end of styles
