--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,3 +1,11 @@
+/*
+====================================
+General Typography Styles
+====================================
+*/
+
+/* links */
+
 a {
 	color: $sunset;
 	text-decoration: none;
@@ -6,28 +14,27 @@ a {
 	}
 }
 
-h1 {
+/* headings */
+
+h1, h2, h3, h4 {
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 5.4rem;
 	color: $sunset;
+}
+
+h1 {
+	font-size: 5.4rem;
 }
 
 h2 {
-	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 7.2rem;
-	color: $sunset;
 }
 
 h3 {
-	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 2.8rem;
-	color: $sunset;
 }
 
 h4 {
-	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 2.4rem;
-	color: $sunset;
 }
 
 /* paragraphs */
@@ -37,7 +44,7 @@ p {
 	line-height: 1.5;
 }
 
-/*blockquotes*/
+/* blockquotes */
 
 blockquote {
 	background: #F7F7F7;
@@ -48,7 +55,7 @@ blockquote {
 	}
 }
 
-/*tables*/
+/* tables */
 
 table {
 	td {
@@ -59,7 +66,7 @@ table {
 	}
 }
 
-/*def lists*/
+/* def lists */
 
 dt {
 	font-weight: 600;
@@ -71,13 +78,13 @@ dd {
 	margin-left: 10px;
 }
 
-/*lists*/
+/* lists */
 
 // ul li, ol li {
 // 	padding: 3px;
 // }
 
-/*PRE*/
+/* PRE */
 
 pre {
 	background: #F7F7F7;
@@ -86,37 +93,4 @@ pre {
 	border: 1px solid #ccc;
 }
 
-
-/*
-====================================
-Global Classes / Wordpress Specific
-====================================
-*/
-
-.aligncenter {
-	text-align: center;
-	margin: 0 auto;
-}
-
-.alignleft {
-	float: left;
-}
-
-.alignright {
-	float: right;
-}
-
-img {
-	&.alignleft {
-		padding-right: 5px;
-	}
-	&.alignright {
-		padding-left: 5px;
-	}
-}
-
-.clear {
-	width: 100%;
-	float: left;
-	clear: both;
-}
+// end of styles
