--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,13 @@
-// variables
+/*
+====================================
+Variables
+====================================
+*/
+
 $seagreen: rgba(158, 232, 197, 1);
 $seagreen70: rgba(158, 232, 197, 0.7);
 $sunset: rgba(253, 78, 73, 1);
 $sunset50: rgba(253, 78, 73, 0.5);
 $darkgrey: rgba(52, 52, 52, 1);
+
+// end of variables
