--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /*
 * Theme Name: Food Theme
 * Theme URI: https://github.com/WordPress-Wizards;
-* Description: Starter theme for building a food/beverage site. Created by Wordpress Wizards
+* Description: Starter theme for building a food/beverage site. Created by WordPress Wizards.
 * Version: 1.0
 * Author: Vesna Jocic & John Salvino
 * Author URI: https://github.com/WordPress-Wizards
@@ -9,336 +9,14 @@
 
 @import 'normalize';
 @import 'variables';
+@import 'wordpress';
 @import 'typography';
+@import 'general';
 @import 'navigation';
-@import 'sidebar';
 @import 'comments';
 @import 'footer';
-
-/*
-====================================
-Default Styling
-====================================
-*/
-
-html {
-	font-size: 10px;
-}
-
-body {
-	color: $darkgrey;
-	font-family: 'Roboto Slab', serif;
-}
-
-img {
-	max-width: 100%;
-}
-
-.container {
-	max-width: 1200px;
-	margin: 0 auto;
-}
-
-.content {
-	float: left;
-	width: 65%;
-	margin-right: 5%;
-}
-
-.full {
-	width: 100%;
-}
-
-header,
-footer {
-	text-align: center;
-}
-
-/*
-====================================
-Home Page Default Styling
-====================================
-*/
-
-.wrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100vh;
-}
-
-.main-home {
-	text-align: center;
-}
-
-header .container {
-  margin-top: 2.5rem;
-}
-
-.hero-text {
-	width: 30%;
-	padding: 4% 0;
-	margin: 0 auto;
-	background: $seagreen70;
-}
-
-.hero-text p {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 7.2rem;
-	color: $sunset;
-	margin: 0;
-	padding: 0;
-}
-
-.hero-text p:last-child {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 2.8rem;
-	color: $sunset;
-	line-height: 1;
-	margin: 0;
-	padding: 0;
-}
-
-/*
-====================================
-About Page Default Styling
-====================================
-*/
-
-.main-about {
-	text-align: center;
-	margin: 6% 0 5% 0;
-}
-
-.about-text {
-	width: 70%;
-	padding: 2% 6%;
-	margin: 0 auto;
-	background: $seagreen70;
-}
-
-.about-text p {
-	font-size: 1.6rem;
-	color: #333;
-	line-height: 1.5;
-	font-family: 'Roboto Slab', serif;
-}
-
-.about-text p:first-child {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 2.8rem;
-	color: $sunset;
-	line-height: 1;
-	margin-bottom: 1%;
-	padding: 0;
-}
-
-
-/*
-====================================
-Menu Page Default Styling
-====================================
-*/
-.main-food-menu .container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 10% 0;
-}
-
-.main-food-menu .sidebar {
-	text-align: center;
-	width: 100%;
-}
-
-.main-food-menu .sidebar img {
-	width: 100%;
-}
-
-/*
-====================================
-Contact Page Default Styling
-====================================
-*/
-
-.main-contact {
-	margin: 2% 0;
-}
-
-.main-contact p {
-	font-weight: 300;
-}
-
-.main-contact .container {
-	display: flex;
-	background: $seagreen70;
-	width: 70%;
-}
-
-.main-contact .container .contact-text {
-	width: 70%;
-	text-align: center;
-}
-
-.main-contact .container .sidebar {
-	width: 30%;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="submit"]:focus,
-textarea:focus {
-	outline: none;
-}
-
-
-input[type="text"],
-input[type="email"],
-input[type="submit"],
-textarea
-{
-	padding: 0.6rem;
-	border:none;
-	resize: none;
-	color: $darkgrey;
-}
-
-textarea {
-	height: 10rem;
-}
-
-.contact-text {
-	width: 70%;
-	margin: 0 auto;
-}
-
-.contact-text p {
-	font-size: 1.8rem;
-	color: $darkgrey;
-	line-height: 1.5;
-	font-family: 'Roboto Condensed', sans-serif;
-}
-
-.contact-text h3{
-	color: $sunset;
-	font-size: 2.8rem;
-}
-
-input[type="submit"] {
-	color: $sunset;
-	background: none;
-	text-transform: uppercase;
-	padding: 1rem 2rem;
-	border: 1px solid $sunset;
-}
-
-input[type="submit"]:hover {
-	color: $seagreen;
-	background: $sunset;
-	transition: all 0.5s ease;
-}
-
-.sci-contact {
-	margin-bottom: 6rem;
-}
-
-.sci-contact p {
-	line-height: 0.5;
-}
-
-.sci-address p {
-	line-height: 0.3;
-}
-
-/*
-====================================
-Blog Page Default Styling
-====================================
-*/
-
-.container-blog {
-	margin: 5%;
-	h2 {
-		font-size: 2.8rem;
-		font-weight: 400;
-		margin: 0;
-		a:hover {
-			color: darken($sunset, 15%);
-		}
-	}
-	h3 {
-		font-weight: 400;
-		margin: 0 0 1rem 0;
-		text-transform: uppercase;
-	}
-	p {
-		font-family: 'Roboto Slab', serif;
-		font-size: 1.6rem;
-		font-weight: 300;
-		line-height: 1.5;
-		color: $darkgrey;
-		padding: 0;
-	}
-	span.divider {
-		color: darken($seagreen, 35%);
-	}
-	img {
-		width: 100%;
-		height: 100%;
-	}
-}
-
-.container-blog .content {
-	float: left;
-	width: 75%;
-	margin-right: 5%;
-}
-
-.container-blog article {
-	background: $seagreen;
-	margin-bottom: 2.5%;
-	padding: 2.5%;
-}
-
-.container-blog .entry-img {
-	float: left;
-	width: 25%;
-	margin-right: 2.5%;
-}
-
-.container-blog .entry-text {
-	float: left;
-	width: 67.5%;
-}
-
-.container-blog footer {
-	text-align: left;
-	a {
-		margin: 2px 0;
-	}
-	p:first-child a {
-		display: inline-block;
-		background: $sunset50;
-		padding: 0 5px;
-	}
-}
-
-.container-blog .sidebar {
-	width: 20%;
-	float: left;
-	ul {
-		margin-bottom: 1.8rem;
-	}
-	a {
-		font-size: 1.6rem;
-		font-weight: 300;
-		color: $darkgrey
-	}
-	a:hover {
-		text-decoration: underline;
-	}
-}
-
-
-
-
+@import 'home';
+@import 'about';
+@import 'menu';
+@import 'blog';
+@import 'contact';
