Various blog related items styling

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -87,4 +87,10 @@ Blog Page Default Styling
 	}
 }
 
+.post-content{
+	background: $seagreen70;
+	margin-bottom: 2.5%;
+	padding: 2.5%;
+}
+
 // end of styles
