--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -6,6 +6,12 @@ Blog Page Default Styling
 
 .container-blog {
 	margin: 6% 5% 5% 5%;
+	h1 {
+		font-size: 2.8rem;
+		font-weight: 400;
+		text-transform: uppercase;
+		margin-top: 0;
+	}
 	h2 {
 		font-size: 2.8rem;
 		font-weight: 400;
@@ -87,10 +93,28 @@ Blog Page Default Styling
 	}
 }
 
-.post-content{
+.post-content {
 	background: $seagreen70;
 	margin-bottom: 2.5%;
 	padding: 2.5%;
+	.entry-img {
+		width: 100%;
+		margin-bottom: 2.5%;
+	}
+	.entry-meta,
+	.entry-utility {
+		font-size: 1.4rem;
+		font-weight: 300;
+	}
+	.entry-utility a {
+		display: inline-block;
+		background: $sunset50;
+		padding: 0 5px;
+	}
+	.entry-utility a:last-child {
+		background: transparent;
+		padding: 0;
+	}
 }
 
 // end of styles
