A few misc style updates

--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -268,4 +268,9 @@ p.form-allowed-tags, .nocomments {
 	margin: 0;
 }
 
+#nav-below {
+	display: flex;
+	justify-content: space-between;
+}
+
 // end of styles
