--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -116,4 +116,24 @@ Blog Page Default Styling
 		padding: 0;
 	}
 }
+
+@media all and (max-width: 800px) {
+	.container-blog .content {
+		float: none;
+		width: 90%;
+		margin: 0 auto;
+	}
+	
+	.container-blog h2 {
+		font-size: 2.0rem;
+	}
+
+	.container-blog p {
+		font-size: 1.2rem;
+	}
+
+	.container-blog .sidebar {
+		display: none;
+	}
+}
 // end of styles
