--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -27,7 +27,7 @@ img {
 }
 
 .header-main {
-	margin: 2% 0;
+	margin: 2% 0 0 0;
 }
 
 .content { 
@@ -54,6 +54,56 @@ img {
 
 footer {
 	clear: both;
+}
+
+// media queries
+
+@media all and (max-width: 1100px) {
+	html {
+	font-size: 9.5px;
+	}
+}
+
+@media all and (max-width: 1000px) {
+	html {
+	font-size: 9px;
+	}
+}
+
+@media all and (max-width: 900px) {
+	html {
+	font-size: 8.5px;
+	}
+}
+
+@media all and (max-width: 800px) {
+	html {
+	font-size: 8px;
+	}
+}
+
+@media all and (max-width: 700px) {
+	html {
+	font-size: 7.5px;
+	}
+}
+
+@media all and (max-width: 600px) {
+	html {
+	font-size: 7px;
+	}
+}
+
+@media all and (max-width: 500px) {
+	html {
+	font-size: 6.5px;
+	}
+}
+
+@media all and (max-width: 400px) {
+	html {
+	font-size: 6px;
+	}
 }
 
 // end of styles
