--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -44,12 +44,12 @@ Navigation Styling
   font-size: 5.4rem;
   text-transform: uppercase;
   text-shadow: 2px 2px 1px white;
-  border-bottom: 6px solid $sunset;
   line-height: 1;
   margin: 0 4rem;
 }
 
 #menu-main-nav li:nth-child(3) a {
+  border-bottom: 6px solid $sunset;
   padding: 0;
   margin: 0;
 }
@@ -58,28 +58,6 @@ Navigation Styling
   color: darken($sunset, 10%);
   border-bottom: 6px solid darken($sunset, 10%);
 }
-
-@media all and (max-width: 800px) {
-  #menu-main-nav {
-    display: flex;
-    flex-direction: column;
-  }
-
-  #menu-main-nav li {
-    padding: 3rem 4rem 2rem 4rem;
-  }
-
-  #menu-main-nav li:nth-child(3) {
-    order: -1;
-    margin-bottom: 5rem;
-  }
- #menu-main-nav li:nth-child(3) a:hover {
-  border-bottom: none;
-  }
-}
-
-
-
 
 // social nav styles
 
@@ -98,23 +76,49 @@ Navigation Styling
 	content: '';
 }
 
-@media all and (max-width: 800px) {
-  #menu-social-menu {
-    width: 100%;
-  }
+// media queries
 
-  #menu-social-menu li a {
-    font-size: 1.8rem;
+@media (max-width: 1200px) {
+  #menu-main-nav li a {
+    margin: 2rem 2.8rem 0 2.8rem;
+  }
+  #menu-main-nav li:nth-child(3) {
+    margin: 0 2.8rem;
   }
 }
 
-
-
-// media queries
-
-@media (max-width: 1175px) {
+@media (max-width: 1100px) {
   #menu-main-nav li a {
     margin: 2rem 2rem 0 2rem;
+  }
+  #menu-main-nav li:nth-child(3) {
+    margin: 0 2rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  #menu-main-nav li a {
+    margin: 2rem 1.5rem 0 1.5rem;
+  }
+  #menu-main-nav li:nth-child(3) {
+    margin: 0 1.5rem;
+  }
+}
+
+@media all and (max-width: 900px) {
+  #menu-main-nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  #menu-main-nav li:nth-child(3) {
+    order: -1;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+  #menu-main-nav li a {
+    margin: 0 1.8rem 0 1.8rem;
   }
 }
 
